# spanpygui

./: .gitignore  README.md  main.py  pyproject.toml
example/: rainbow.TextGrid  rainbow.txt  rainbow_wmfa.TextGrid  rainbow_wx.TextGrid
spanpygui/: __init__.py  config.toml  main.py  requirements.txt
spanpygui/client/static/js/: resize.js
spanpygui/client/static/styles/: index.css  widget.css
spanpygui/client/templates/: index.html
spanpygui/client/templates/widgets/: text.html  timeline.html
spanpygui/server/: app.py  module_import.py  runtime.py  session.py  utils.py  video_player.py
spanpygui/server/browsers/: browser.py
spanpygui/utils/: data.py  notebook.py  render.py
